# Informal_bids

./: .gitignore  AGENTS.md  README.md  pyproject.toml
contrib/alex/alex_gorbenko/matlab/: GibbsGP3.m  simGP_Aug2025.m
contrib/alex/cohen_einav/Cohen_Einav_Gibbs_Code/: gibbs_benchmark.m  main_program.m  myinv.m  output.m  readme.txt  tables1_2_3.do
contrib/alex/matlab_packages/econometrics/data/: contents.html  contents.html.$$$
contrib/alex/matlab_packages/econometrics/spatial/: prt_spat.m  spcontents.html
contrib/alex/matlab_packages/econometrics/spatial/casetti_models/: contents.m
contrib/alex/matlab_packages/econometrics/spatial/data_sets/: htoledo.txt
contrib/alex/matlab_packages/econometrics/spatial/far_models/: contents.html  contents.m  far.m  far_compare.m  far_g.m  far_gc.m  far_gcc.c  far_gcd.m  far_gcd2.m  far_gcd3.m  (+4 more)
contrib/alex/matlab_packages/econometrics/ts_aggregation/: td.sal
contrib/alex/matlab_packages/econometrics/var_bvar/: becmg.out  contents.html  ecm.out  recm.out  recm_d.m  rvarg.out  svar.aux
docs/14-01-26/: README.md
docs/18-12-25/: README.md  meeting_notes_1218.tex
reports/: analysis_report.tex  technical_report.tex
reports/14-01-26/: task_a_cond_mh_note.md
src/informal_bids/: __init__.py  analysis.py  bounds.py  cli.py  compare.py  config.py  data.py  data_io.py  kernels.py  mcmc.py  misreporting.py  numba_kernels.py  samplers.py  selection.py  sensitivity.py  sim.py  specs.py  types.py  utils.py  visualization.py
src/informal_bids.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+105 files in other folders)
