[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "informal-bids"
version = "0.3.0"
description = "MCMC estimation for informal bid admission cutoffs in auctions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "seaborn",
  "pandas",
  "numba",
]

[project.scripts]
task-b-run = "informal_bids.cli:task_b_run"
task-b-compare = "informal_bids.cli:task_b_compare"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["informal_bids"]
